bzr-svn 0.4.5	UNRELEASED

  INTERNALS

   * No longer store svn:author, svn:date and svn:log in the bzr-svn cache. 
     This should make it easier to use bzr-specific revprops later on and 
	 saves some disk space.

  BUG FIXES

   * Properly decode unicode commit messages. 

bzr-svn 0.4.4	2007-11-02

  PERFORMANCE

   * Improved import times, making bzr faster if bzr-svn is loaded but 
     not used.

  IMPROVEMENTS
   
   * Avoid tracebacks on "Malformed data" errors.

   * Make push location optional for svn-push. 
   
   * Make svn-push support --remember.

   * No longer gives trackeback when already upgraded revisions are present.
     (#130471)

   * Clearer error when prefix is missing during push.

   * Support optionally overriding svn:author and svn:date (#140001)

   * Convert errno's returned by the remote server into OSError exceptions.

  INTERNALS

   * Handle NULL_REVISION in SvnRepository.copy_content(). Fixes compatibility 
     with bzr merge-into.

   * Implement ListBranchingScheme.is_branch_parent(). (#144357)

   * Use revprop lists rather than just commit message when committing.

   * The version of bzr-rebase is now checked before it's being used.

   * Handle checks of modified children correctly when path is the root 
     in LogWalker.find_latest_change().

  BUG FIXES

   * Fix compatibility with 0.92.

   * Fix compatibility with packs. (#139442)

   * Handle long file names with unicode characters correctly on 
     python2.4 (#129334)

   * Give proper warning message when running 'bzr svn-branching-scheme' on 
     something that is not a Subversion repository. (#145159)

   * Give proper warning message when running 'bzr svn-import' on 
     something that is not a Subversion repository. 

   * Support svn+ hack when committing in bound branches. (#150699)

   * Give proper error when changes can't be pushed to root of repository. 
     (#145148)

   * Encode = in list branching scheme names (unusable in Subversion property 