@@ -1,3 +1,5 @@
+#FORMAT rst
+
 ============
 Introduction
 ============
